<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_title"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_l"
        android:text="@string/id_methods_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_welcome_body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_l"
        android:text="@string/id_methods_body1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <View
        android:id="@+id/separator1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_l"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome_body2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/chk_passport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_n"
        android:layout_marginEnd="@dimen/space_l"
        android:checked="true"
        android:paddingTop="@dimen/space_n"
        android:paddingBottom="@dimen/space_n"
        android:text="@string/id_methods_passport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_n"
        android:layout_marginEnd="@dimen/space_l"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chk_passport" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/chk_identity_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_n"
        android:layout_marginEnd="@dimen/space_l"
        android:checked="true"
        android:paddingTop="@dimen/space_n"
        android:paddingBottom="@dimen/space_n"
        android:text="@string/id_methods_identity_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2" />

    <View
        android:id="@+id/separator3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_n"
        android:layout_marginEnd="@dimen/space_l"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chk_identity_card" />

    <ImageView
        android:id="@+id/btnCardScanHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@id/chk_payment_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/chk_payment_card"
        app:tint="@color/button_bg_dark_color" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/chk_payment_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_n"
        android:layout_marginEnd="@dimen/space_l"
        android:paddingTop="@dimen/space_n"
        android:paddingBottom="@dimen/space_n"
        android:text="@string/id_methods_payment_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCardScanHelp"
        app:layout_constraintTop_toBottomOf="@id/separator3" />

    <RadioGroup
        android:id="@+id/radioGroupCardScan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/space_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chk_payment_card">

        <RadioButton
            android:id="@+id/rbCardScanJwtValid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/id_methods_payment_card_simulate_ok" />

        <RadioButton
            android:id="@+id/rbCardScanJwtPanNoMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_methods_payment_card_simulate_ko" />
    </RadioGroup>

    <TextView
        android:id="@+id/lbl_no_valid_selection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_l"
        android:gravity="center_horizontal"
        android:text="@string/settings_selection_no_id_options"
        app:layout_constraintBottom_toTopOf="@id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupCardScan" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/ButtonDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_n"
        android:layout_marginEnd="@dimen/space_2xl"
        android:layout_marginBottom="@dimen/space_xl"
        android:text="@string/id_methods_btn_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_no_valid_selection" />

</androidx.constraintlayout.widget.ConstraintLayout>