<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_l"
        android:text="@string/error_management_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_l"
        android:text="@string/error_management_body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <View
        android:id="@+id/separator1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_l"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBody1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchRetryOnErrors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_n"
        android:layout_marginEnd="@dimen/space_l"
        android:paddingTop="@dimen/space_n"
        android:paddingBottom="@dimen/space_n"
        android:text="@string/error_management_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_n"
        android:layout_marginEnd="@dimen/space_l"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchRetryOnErrors" />

    <TextView
        android:id="@+id/txtBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator2"
        tools:text="@string/error_management_body2_retry" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/ButtonDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:layout_marginBottom="@dimen/space_xl"
        android:text="@string/error_management_btn_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBody2" />

</androidx.constraintlayout.widget.ConstraintLayout>