<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/home_menu" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/automatid_demo_app_feedback_landing"
        tools:background="#80ffffff" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:gravity="center_horizontal"
        android:text="@string/welcome_title"
        android:textColor="@color/text_color_on_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:gravity="center_horizontal"
        android:text="@string/welcome_body1"
        android:textColor="@color/text_color_on_dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label1" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:gravity="center_horizontal"
        android:text="@string/welcome_body2"
        android:textColor="@color/text_color_on_dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label2" />

    <Button
        android:id="@+id/btnStart"
        style="@style/ButtonLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:text="@string/welcome_btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label3" />

    <TextView
        android:id="@+id/txtNotice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:paddingStart="18dp"
        android:paddingTop="12dp"
        android:paddingEnd="18dp"
        android:paddingBottom="12dp"
        android:text="@string/welcome_footer"
        android:textColor="@color/text_color_on_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStart"
        app:layout_constraintVertical_bias="1"
        app:layout_goneMarginTop="@dimen/space_n" />

</androidx.constraintlayout.widget.ConstraintLayout>
