<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        tools:background="#80ffffff"
        tools:lottie_rawRes="@raw/automatid_demo_app_feedback_settings" />

    <TextView
        android:id="@+id/feedbackTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:gravity="center_horizontal"
        android:textColor="@color/text_color_on_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:text="@string/feedback_title_success" />

    <TextView
        android:id="@+id/feedbackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:gravity="center_horizontal"
        android:textColor="@color/text_color_on_dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackTitle"
        tools:text="@string/feedback_body_success" />

    <TextView
        android:id="@+id/btnShareJwt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/feedback_share_jwt"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackText"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/btnClose"
        style="@style/ButtonLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2xl"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_2xl"
        android:layout_marginBottom="@dimen/space_2xl"
        android:text="@string/feedback_btn_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnShareJwt" />

</androidx.constraintlayout.widget.ConstraintLayout>
